# TopicForge

./: .gitignore  README.md  agent.py  ai_agent.ipynb  app.py  frontend.ipynb  frontend.py  pyproject.toml
backend/: agent.py
chroma_db/: chroma.sqlite3
chroma_db/a1321b7a-5aeb-48ff-abe4-b6b52f8470a1/: index_metadata.pickle
