[project]
name = "questions-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-docx>=0.8.11",
    "pymupdf>=1.27.2.3",
    "langchain>=1.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchain-openai>=1.2.1",
    "chromadb>=1.5.9",
    "langgraph>=1.1.10",
    "ipython>=9.13.0",
]
