[project]
name = "questions-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=0.8.11",
    "pymupdf>=1.27.2.3",
    "langchain>=1.2.18",
    "langchain-text-splitters>=1.1.2",
    "langchain-openai>=1.2.1",
    "chromadb>=1.5.9",
    "langgraph>=1.1.10",
    "ipython>=9.13.0",
    "streamlit>=1.57.0",
    "agent>=0.1.3",
    "python-dotenv>=1.2.2",
    "fitz>=0.0.1.dev2",
    "paddleocr>=3.5.0",
    "paddlepaddle>=3.3.1",
    "pypdf>=6.12.1",
]
